[build-system]
requires = ["scikit-build-core>=0.10", "cython>=3.0", "numpy>=2.0", "hatch-fancy-pypi-readme"]
build-backend = "scikit_build_core.build"

[project]
name = "octomap-python"
version = "1.10.0.0"
description = "Python binding of the OctoMap library."
license = { text = "BSD-3-Clause" }
maintainers = [
    { name = "Kentaro Wada", email = "www.kentaro.wada@gmail.com" },
]
requires-python = ">=3.9"
dependencies = ["numpy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["readme"]

[project.urls]
Homepage = "https://github.com/wkentaro/octomap-python"

[dependency-groups]
dev = ["ruff", "pytest"]
# The examples render with trimesh's pyglet-based GL viewer, which still
# requires pyglet 1.x upstream (trimesh.viewer hard-blocks pyglet 2; see
# trimesh PR #2365), so pyglet stays pinned <2. glooey was dropped in favor of
# a single combined scene, which frees the examples from glooey's old pins
# (Python <=3.11, trimesh <4.8.3) so they run on current Python and trimesh.
examples = [
    "imgviz>=1.2.0",
    "pyglet<2",
    "trimesh[easy]>=4.8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.scikit-build]
cmake.version = ">=3.18"
# No pure-Python package directory; CMake installs the compiled extension
# module straight to the wheel root.
wheel.packages = []
metadata.readme.provider = "scikit_build_core.metadata.fancy_pypi_readme"

# github2pypi used to rewrite README's relative URLs to absolute ones so the
# PyPI long description renders images; fancy-pypi-readme does that at build
# time, keeping README.md's relative links intact for GitHub.
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = 'src="(?!https?://)([^"]+)"'
replacement = 'src="https://raw.githubusercontent.com/wkentaro/octomap-python/main/\1"'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '!\[([^\]]*)\]\((?!https?://)([^)]+)\)'
replacement = '![\1](https://raw.githubusercontent.com/wkentaro/octomap-python/main/\2)'

[tool.cibuildwheel]
# Py 3.9-3.14; the trailing "t" free-threaded builds (e.g. cp314t-*) are excluded
# by matching only cp3XX-* without the "t".
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
# Only manylinux is shipped; musllinux (Alpine) users build from the sdist.
skip = "*-musllinux*"
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.ruff]
line-length = 79
extend-exclude = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W"]
# E203 (whitespace before ':') conflicts with the formatter.
ignore = ["E203"]
