[build-system]
build-backend = "scikit_build_core.build"
requires = [
  "cython>=3.0",
  "hatch-fancy-pypi-readme",
  "numpy>=2.0",
  "scikit-build-core>=0.10",
]

[project]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python",
]
dependencies = ["numpy"]
description = "Python binding of the OctoMap library."
dynamic = ["readme"]
license = { text = "BSD-3-Clause" }
maintainers = [{ name = "Kentaro Wada", email = "www.kentaro.wada@gmail.com" }]
name = "octomap-python"
requires-python = ">=3.10"
version = "1.10.0.0"

[project.urls]
Homepage = "https://github.com/wkentaro/octomap-python"

[dependency-groups]
dev = [
  "mdformat",
  "mdformat-gfm",
  "pytest",
  "pytest-cov",
  "pytest-xdist",
  "ruff",
  "taplo",
  "ty",
  "typos",
  "yamlfix",
]
# The examples use an old GUI stack pinned to keep it working: glooey 0.3.6
# needs pyglet 1.x APIs (e.g. graphics.OrderedGroup), trimesh.viewer.SceneWidget
# was removed in trimesh 4.8.3, and glooey's autoprop/typeguard chain relies on
# ast.Str (removed in Python 3.12), so the examples run on Python <=3.11; see
# .python-version.
examples = ["glooey==0.3.6", "imgviz>=1.2.0", "pyglet<2", "trimesh[easy]<4.8.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.scikit-build]
cmake.version = ">=3.18"
# No pure-Python package directory; CMake installs the compiled extension
# module straight to the wheel root.
metadata.readme.provider = "scikit_build_core.metadata.fancy_pypi_readme"
wheel.packages = []

# github2pypi used to rewrite README's relative URLs to absolute ones so the
# PyPI long description renders images; fancy-pypi-readme does that at build
# time, keeping README.md's relative links intact for GitHub.
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = 'src="(?!https?://)([^"]+)"'
replacement = 'src="https://raw.githubusercontent.com/wkentaro/octomap-python/main/\1"'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '!\[([^\]]*)\]\((?!https?://)([^)]+)\)'
replacement = '![\1](https://raw.githubusercontent.com/wkentaro/octomap-python/main/\2)'

[tool.cibuildwheel]
# Py 3.10-3.14; the trailing "t" free-threaded builds (e.g. cp314t-*) are excluded
# by matching only cp3XX-* without the "t".
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
# Only manylinux is shipped; musllinux (Alpine) users build from the sdist.
skip = "*-musllinux*"
test-command = "pytest {project}/tests"
test-requires = "pytest"

[tool.ty.src]
# The examples import an unstubbed GUI stack (trimesh, imgviz, glooey, pyglet)
# that is only installed for the optional "examples" group.
exclude = ["examples"]

[tool.ty.rules]
all = "error"

[tool.ruff]
extend-exclude = ["src"]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W"]
# E203 (whitespace before ':') conflicts with the formatter.
ignore = ["E203"]
